              throws an exception if its preconditions fail.
            - Routines layerOn(), pinchEdge() and puncture() now throw an
              exception if their preconditions fail.
            - Routine reorderTetrahedraBFS() is now a deprecated alias for
              reorderBFS() (which is available in all dimensions).
        Class Vector<T>:
            - Added support for tight encodings and decodings.
            - New routine hash(), which uses the tight encoding.
        Constants is_cpp_integer_v<T>, is_unsigned_cpp_integer_v<T>:
            - New alternatives to using std::is_integeral_v<T> and
              std::is_unsigned_v<T> that allow for 128-bit integers also.
    PYTHON:
        - Updated the included pybind11 library from 2.10.0 to 2.10.4.
        - Improved the speed of iteration (specifically, throwing/catching
          StopIteration exceptions).
    USER INTERFACE:
        - Now uses multithreading for those long computations that support it.

Version 7.3  [ 18 March, 2023 ]

    ENGINE:
        Class BitManipulator<T>:
            - Routines bits(), firstBit() and lastBit() are now constexpr.
        Class Component<4>:
            - Fix a bug where single-vertex boundary components were included
              in Triangulation<4>::boundaryComponents(), but were omitted from
              Component<4>::boundaryComponents().
        Class GroupExpression:
            - The string constructor now contracts terms like "aaaaBB" to become
              g0^4 g1^-2 (i.e., exponents will be used even if the input does
              not supply them).
            - The string constructor now takes the number of generators as an
              optional argument, and throws an exception if some generator in
              the string is out of range.
        Class GroupPresentation:
            - Routine enumerateCovers() now accepts indices ≤ 11, not ≤ 7.
            - The string constructor now contracts terms like "aaaaBB" to become