@@ -874,6 +874,57 @@ Returns:
     ``True`` if and only if it determines that it is capable of
     performing such a change.)doc";
 
+// Docstring regina::python::doc::Triangulation_::simplifyUpDown
+static const char *simplifyUpDown =
+R"doc(Attempts to simplify this triangulation by making increasingly long
+sequences of 2-4 moves and then attempting to simplify back down.
+
+This routine will _only_ perform 2-4 moves, 2-0 edge moves, 2-0
+triangle moves, and 3-3 moves.
+
+The main purpose of this routine is to offer a "well-climbing"
+technique that explores more widely than intelligentSimplify(), but
+that is not nearly as slow as simplifyExhaustive().
+
+If this triangulation is currently oriented, then this operation will
+preserve the orientation.
+
+If any pentachora and/or tetrahedra are locked, these locks will be
+respected: that is, this routine will avoid any moves that would
+violate these locks (and in particular, no LockException exceptions
+should be thrown). Of course, however, having locks may make the
+simplification less effective in reducing the number of pentachora.
+
+.. warning::
+    The specific behaviour of this routine will almost certainly
+    change between releases.
+
+Parameter ``max24``:
+    the maximum number of consecutive 2-4 moves to perform in a single
+    "up" sequence. Note that this routine will attempt several "up"
+    sequences of differing lengths, and in particular may eventually
+    pass through triangulations with more than ``size() + max24``
+    pentachora. If this is -1, then a sensible default will be chosen.
+
+Parameter ``max33``:
+    the maximum number of consecutive 3-3 moves to perform immediately
+    after each "up" sequence. If this is -1, then a sensible default
+    will be chosen.
+
+Parameter ``alwaysModify``:
+    ``True`` if this triangulation should be modified after this
+    operation, even if the final endpoint has _more_ pentachora than
+    the triangulation began with, or ``False`` if this triangulation
+    should only be modified if the total number of pentachora was
+    strictly reduced.
+
+Returns:
+    ``True`` if and only if the number of pentachora was strictly
+    reduced.
+
+Author:
+    Rhuaidi Burke)doc";
+
 // Docstring regina::python::doc::Triangulation_::snapEdge
 static const char *snapEdge =
 R"doc(Snaps together the endpoints of an edge connecting an internal vertex
